version 3.0 Manu Exposito/tests/error/error.prg
procedure main()
	
	? a + 5
	
return 